<resources>
    <string name="app_name">StoriesW</string>
    <string name="login">Login</string>
    <string name="title_login_page">Share your stories!</string>
    <string name="message_login_page">Insert your Email and Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_signup_page">Create New Account</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="or">- don\'t have an account? -</string>
    <string name="validation_password">8 characters minimum</string>

    <string name="label_day">%1$d days ago</string>
    <string name="label_hour">%1$d hours ago</string>
    <string name="label_minutes">%1$d minutes ago</string>
    <string name="label_seconds">%1$d seconds ago</string>
    <string name="label_description">Description</string>
    <string name="validation_email">Wrong email format!</string>
    <string name="upload_image">Upload story image</string>
    <string name="add_description">Add description</string>
    <string name="hint_add_story_description">Add a description for your story</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload_story">Upload Story</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="login_failed">wrong email/password</string>
    <string name="fill_required">Form must be filled</string>
    <string name="register_success">Account successfully created</string>
    <string name="image_size">Image size exceeds 1 MB</string>
    <string name="translate">Change Language</string>
    <string name="upload_failed">Upload story failed!</string>
    <string name="upload_success">New story added!</string>
    <string name="error_dialog">An error occured, please try again.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="map_check">Add current location to story</string>
    <string name="settings_menu">settings_menu</string>
    <string name="retry">Retry</string>
</resources>