<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddActivity">

    <TextView
        android:id="@+id/tv_upload_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:text="@string/upload_image"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_add_photo"
        android:layout_width="310dp"
        android:layout_height="310dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_dash_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_upload_photo"
        app:srcCompat="@drawable/baseline_add_a_photo_24"
        android:contentDescription="@string/upload_image" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/gallery"
        android:textSize="16sp"
        app:cornerRadius="@dimen/dimen_8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/iv_add_photo" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/camera"
        android:textSize="16sp"
        app:cornerRadius="@dimen/dimen_8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/iv_add_photo" />

    <TextView
        android:id="@+id/tv_add_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="32dp"
        android:text="@string/add_description"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/galleryButton" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_description_story"
            android:hint="@string/hint_add_story_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:textSize="14sp"
            android:ems="10"
            android:lines="5"
            android:maxLines="5"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/upload_story"
        android:textSize="16sp"
        app:cornerRadius="@dimen/dimen_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditTextLayout"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/progressCard"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="parent" >

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <CheckBox
        android:id="@+id/locationCheck"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/map_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditTextLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>